tentando resolver um problemas com o design responsivo

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="pt-br">
     <head>
         <meta chaset="UTF-8">
-        <meta name="viewport" content="width="device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Calculadora com HTML, CSS e JS puros</title>
 
         <link rel="stylesheet" type="text/css" href="css/estilo.css">
